@@ -17,6 +17,9 @@ Tests
 * add tests of libcthreads_queue_push_sorted
 * add tests of libcthreads_queue_push_sorted
 
+20160404
+* added value free callback function to queue free
+
 20160403
 * fixed values array not being freed after join of thread pool
 
